Subo actualizacion con cambio de fondo y botones mas grandes

--- a/Source/iTotemDesktop/Shell/MediaContentView.ui
+++ b/Source/iTotemDesktop/Shell/MediaContentView.ui
@@ -6,12 +6,18 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>164</width>
-    <height>113</height>
+    <width>186</width>
+    <height>149</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
+  </property>
+  <property name="styleSheet">
+   <string notr="true">QPushButton{
+width: 60px;
+height: 60px;
+}</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="0" column="0">
